farthest point sampling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.26)
 project(cuda-programing VERSION 0.1.0 LANGUAGES CXX CUDA)
 add_subdirectory(helloworld)
+add_subdirectory(shared_memory)
+add_subdirectory(fps)
 
