--- a/fps/CMakeLists.txt
+++ b/fps/CMakeLists.txt
@@ -1,14 +1,15 @@
 # CMakeLists.txt
 cmake_minimum_required(VERSION 3.26)
 
+enable_language(CUDA)
 
 # 确保启用了 CUDA
 find_package(CUDA REQUIRED)
 
 # 添加 CUDA 文件
-add_executable(helloworld main.cu)
+add_executable(fps fps.cu main.cc)
 
-target_compile_options(helloworld PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
+target_compile_options(fps PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
                        -G
                        -g, -0
                        --generate-line-info
@@ -16,5 +17,7 @@ target_compile_options(helloworld PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
                        --relocatable-device-code=true
                        >)
 
+
+message(STATUS "message: CMAKE_CUDA_FLAGS=${CMAKE_CUDA_FLAGS}")
 # 设置 CUDA 计算能力（可选）
-set_target_properties(helloworld PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(fps PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
